# wordler

./: README.md  Wordler  Wordler.wpr  pyproject.toml  setup.py  words.txt
Wordler/: __init__.py  strategy.py  wordler.py
Wordler/tests/: test_strategy.py  test_wordler.py
